src/main/gen/org/jabref/logic/bst/BstParser.java
// $ANTLR 3.5.2 /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g 2018-06-12 09:29:05
// Generated by ANTLR
package org.jabref.logic.bst;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class BstParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMANDS", "ENTRY", "EXECUTE", 
		"FUNCTION", "IDENTIFIER", "IDLIST", "INTEGER", "INTEGERS", "ITERATE", 
		"LETTER", "LINE_COMMENT", "MACRO", "NUMERAL", "QUOTED", "READ", "REVERSE", 
		"SORT", "STACK", "STRING", "STRINGS", "WS", "'*'", "'+'", "'-'", "':='", 
		"'<'", "'='", "'>'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int COMMANDS=4;
	public static final int ENTRY=5;
	public static final int EXECUTE=6;
	public static final int FUNCTION=7;
	public static final int IDENTIFIER=8;
	public static final int IDLIST=9;
	public static final int INTEGER=10;
	public static final int INTEGERS=11;
	public static final int ITERATE=12;
	public static final int LETTER=13;
	public static final int LINE_COMMENT=14;
	public static final int MACRO=15;
	public static final int NUMERAL=16;
	public static final int QUOTED=17;
	public static final int READ=18;
	public static final int REVERSE=19;
	public static final int SORT=20;
	public static final int STACK=21;
	public static final int STRING=22;
	public static final int STRINGS=23;
	public static final int WS=24;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public BstParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public BstParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return BstParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g"; }


	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:22:1: program : ( commands )+ -> ^( COMMANDS ( commands )+ ) ;
	public final BstParser.program_return program() throws RecognitionException {
		BstParser.program_return retval = new BstParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope commands1 =null;

		RewriteRuleSubtreeStream stream_commands=new RewriteRuleSubtreeStream(adaptor,"rule commands");

		try {
			// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:22:9: ( ( commands )+ -> ^( COMMANDS ( commands )+ ) )
			// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:22:11: ( commands )+
			{
			// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:22:11: ( commands )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( ((LA1_0 >= ENTRY && LA1_0 <= FUNCTION)||(LA1_0 >= INTEGERS && LA1_0 <= ITERATE)||LA1_0==MACRO||(LA1_0 >= READ && LA1_0 <= SORT)||LA1_0==STRINGS) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:22:11: commands
					{
					pushFollow(FOLLOW_commands_in_program62);
					commands1=commands();
					state._fsp--;

					stream_commands.add(commands1.getTree());
					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			// AST REWRITE
			// elements: commands
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 22:21: -> ^( COMMANDS ( commands )+ )
			{
				// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:22:24: ^( COMMANDS ( commands )+ )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(COMMANDS, "COMMANDS"), root_1);
				if ( !(stream_commands.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_commands.hasNext() ) {
					adaptor.addChild(root_1, stream_commands.nextTree());
				}
				stream_commands.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class commands_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "commands"
	// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:24:1: commands : ( STRINGS ^ idList | INTEGERS ^ idList | FUNCTION ^ id stack | MACRO ^ id '{' ! STRING '}' !| READ ^| EXECUTE ^ '{' ! function '}' !| ITERATE ^ '{' ! function '}' !| REVERSE ^ '{' ! function '}' !| ENTRY ^ idList0 idList0 idList0 | SORT ^);
	public final BstParser.commands_return commands() throws RecognitionException {
		BstParser.commands_return retval = new BstParser.commands_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token STRINGS2=null;
		Token INTEGERS4=null;
		Token FUNCTION6=null;
		Token MACRO9=null;
		Token char_literal11=null;
		Token STRING12=null;
		Token char_literal13=null;
		Token READ14=null;
		Token EXECUTE15=null;
		Token char_literal16=null;
		Token char_literal18=null;
		Token ITERATE19=null;
		Token char_literal20=null;
		Token char_literal22=null;
		Token REVERSE23=null;
		Token char_literal24=null;
		Token char_literal26=null;
		Token ENTRY27=null;
		Token SORT31=null;
		ParserRuleReturnScope idList3 =null;
		ParserRuleReturnScope idList5 =null;
		ParserRuleReturnScope id7 =null;
		ParserRuleReturnScope stack8 =null;
		ParserRuleReturnScope id10 =null;
		ParserRuleReturnScope function17 =null;
		ParserRuleReturnScope function21 =null;
		ParserRuleReturnScope function25 =null;
		ParserRuleReturnScope idList028 =null;
		ParserRuleReturnScope idList029 =null;
		ParserRuleReturnScope idList030 =null;

		Object STRINGS2_tree=null;
		Object INTEGERS4_tree=null;
		Object FUNCTION6_tree=null;
		Object MACRO9_tree=null;
		Object char_literal11_tree=null;
		Object STRING12_tree=null;
		Object char_literal13_tree=null;
		Object READ14_tree=null;
		Object EXECUTE15_tree=null;
		Object char_literal16_tree=null;
		Object char_literal18_tree=null;
		Object ITERATE19_tree=null;
		Object char_literal20_tree=null;
		Object char_literal22_tree=null;
		Object REVERSE23_tree=null;
		Object char_literal24_tree=null;
		Object char_literal26_tree=null;
		Object ENTRY27_tree=null;
		Object SORT31_tree=null;

		try {
			// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:25:2: ( STRINGS ^ idList | INTEGERS ^ idList | FUNCTION ^ id stack | MACRO ^ id '{' ! STRING '}' !| READ ^| EXECUTE ^ '{' ! function '}' !| ITERATE ^ '{' ! function '}' !| REVERSE ^ '{' ! function '}' !| ENTRY ^ idList0 idList0 idList0 | SORT ^)
			int alt2=10;
			switch ( input.LA(1) ) {
			case STRINGS:
				{
				alt2=1;
				}
				break;
			case INTEGERS:
				{
				alt2=2;
				}
				break;
			case FUNCTION:
				{
				alt2=3;
				}
				break;
			case MACRO:
				{
				alt2=4;
				}
				break;
			case READ:
				{
				alt2=5;
				}
				break;
			case EXECUTE:
				{
				alt2=6;
				}
				break;
			case ITERATE:
				{
				alt2=7;
				}
				break;
			case REVERSE:
				{
				alt2=8;
				}
				break;
			case ENTRY:
				{
				alt2=9;
				}
				break;
			case SORT:
				{
				alt2=10;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:25:4: STRINGS ^ idList
					{
					root_0 = (Object)adaptor.nil();


					STRINGS2=(Token)match(input,STRINGS,FOLLOW_STRINGS_in_commands81); 
					STRINGS2_tree = (Object)adaptor.create(STRINGS2);
					root_0 = (Object)adaptor.becomeRoot(STRINGS2_tree, root_0);

					pushFollow(FOLLOW_idList_in_commands84);
					idList3=idList();
					state._fsp--;

					adaptor.addChild(root_0, idList3.getTree());

					}
					break;
				case 2 :
					// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:26:4: INTEGERS ^ idList
					{
					root_0 = (Object)adaptor.nil();


					INTEGERS4=(Token)match(input,INTEGERS,FOLLOW_INTEGERS_in_commands89); 
					INTEGERS4_tree = (Object)adaptor.create(INTEGERS4);
					root_0 = (Object)adaptor.becomeRoot(INTEGERS4_tree, root_0);

					pushFollow(FOLLOW_idList_in_commands92);
					idList5=idList();
					state._fsp--;

					adaptor.addChild(root_0, idList5.getTree());

					}
					break;
				case 3 :
					// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:27:4: FUNCTION ^ id stack
					{
					root_0 = (Object)adaptor.nil();


					FUNCTION6=(Token)match(input,FUNCTION,FOLLOW_FUNCTION_in_commands97); 
					FUNCTION6_tree = (Object)adaptor.create(FUNCTION6);
					root_0 = (Object)adaptor.becomeRoot(FUNCTION6_tree, root_0);

					pushFollow(FOLLOW_id_in_commands100);
					id7=id();
					state._fsp--;

					adaptor.addChild(root_0, id7.getTree());

					pushFollow(FOLLOW_stack_in_commands102);
					stack8=stack();
					state._fsp--;

					adaptor.addChild(root_0, stack8.getTree());

					}
					break;
				case 4 :
					// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:28:4: MACRO ^ id '{' ! STRING '}' !
					{
					root_0 = (Object)adaptor.nil();


					MACRO9=(Token)match(input,MACRO,FOLLOW_MACRO_in_commands107); 
					MACRO9_tree = (Object)adaptor.create(MACRO9);
					root_0 = (Object)adaptor.becomeRoot(MACRO9_tree, root_0);

					pushFollow(FOLLOW_id_in_commands110);
					id10=id();
					state._fsp--;

					adaptor.addChild(root_0, id10.getTree());

					char_literal11=(Token)match(input,32,FOLLOW_32_in_commands112); 
					STRING12=(Token)match(input,STRING,FOLLOW_STRING_in_commands115); 
					STRING12_tree = (Object)adaptor.create(STRING12);
					adaptor.addChild(root_0, STRING12_tree);

					char_literal13=(Token)match(input,33,FOLLOW_33_in_commands117); 
					}
					break;
				case 5 :
					// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:29:4: READ ^
					{
					root_0 = (Object)adaptor.nil();


					READ14=(Token)match(input,READ,FOLLOW_READ_in_commands123); 
					READ14_tree = (Object)adaptor.create(READ14);
					root_0 = (Object)adaptor.becomeRoot(READ14_tree, root_0);

					}
					break;
				case 6 :
					// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:30:4: EXECUTE ^ '{' ! function '}' !
					{
					root_0 = (Object)adaptor.nil();


					EXECUTE15=(Token)match(input,EXECUTE,FOLLOW_EXECUTE_in_commands129); 
					EXECUTE15_tree = (Object)adaptor.create(EXECUTE15);
					root_0 = (Object)adaptor.becomeRoot(EXECUTE15_tree, root_0);

					char_literal16=(Token)match(input,32,FOLLOW_32_in_commands132); 
					pushFollow(FOLLOW_function_in_commands135);
					function17=function();
					state._fsp--;

					adaptor.addChild(root_0, function17.getTree());

					char_literal18=(Token)match(input,33,FOLLOW_33_in_commands137); 
					}
					break;
				case 7 :
					// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:31:4: ITERATE ^ '{' ! function '}' !
					{
					root_0 = (Object)adaptor.nil();


					ITERATE19=(Token)match(input,ITERATE,FOLLOW_ITERATE_in_commands143); 
					ITERATE19_tree = (Object)adaptor.create(ITERATE19);
					root_0 = (Object)adaptor.becomeRoot(ITERATE19_tree, root_0);

					char_literal20=(Token)match(input,32,FOLLOW_32_in_commands146); 
					pushFollow(FOLLOW_function_in_commands149);
					function21=function();
					state._fsp--;

					adaptor.addChild(root_0, function21.getTree());

					char_literal22=(Token)match(input,33,FOLLOW_33_in_commands151); 
					}
					break;
				case 8 :
					// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:32:4: REVERSE ^ '{' ! function '}' !
					{
					root_0 = (Object)adaptor.nil();


					REVERSE23=(Token)match(input,REVERSE,FOLLOW_REVERSE_in_commands157); 
					REVERSE23_tree = (Object)adaptor.create(REVERSE23);
					root_0 = (Object)adaptor.becomeRoot(REVERSE23_tree, root_0);

					char_literal24=(Token)match(input,32,FOLLOW_32_in_commands160); 
					pushFollow(FOLLOW_function_in_commands163);
					function25=function();
					state._fsp--;

					adaptor.addChild(root_0, function25.getTree());

					char_literal26=(Token)match(input,33,FOLLOW_33_in_commands165); 
					}
					break;
				case 9 :
					// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:33:4: ENTRY ^ idList0 idList0 idList0
					{
					root_0 = (Object)adaptor.nil();


					ENTRY27=(Token)match(input,ENTRY,FOLLOW_ENTRY_in_commands171); 
					ENTRY27_tree = (Object)adaptor.create(ENTRY27);
					root_0 = (Object)adaptor.becomeRoot(ENTRY27_tree, root_0);

					pushFollow(FOLLOW_idList0_in_commands174);
					idList028=idList0();
					state._fsp--;

					adaptor.addChild(root_0, idList028.getTree());

					pushFollow(FOLLOW_idList0_in_commands176);
					idList029=idList0();
					state._fsp--;

					adaptor.addChild(root_0, idList029.getTree());

					pushFollow(FOLLOW_idList0_in_commands178);
					idList030=idList0();
					state._fsp--;

					adaptor.addChild(root_0, idList030.getTree());

					}
					break;
				case 10 :
					// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:34:4: SORT ^
					{
					root_0 = (Object)adaptor.nil();


					SORT31=(Token)match(input,SORT,FOLLOW_SORT_in_commands183); 
					SORT31_tree = (Object)adaptor.create(SORT31);
					root_0 = (Object)adaptor.becomeRoot(SORT31_tree, root_0);

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "commands"


	public static class identifier_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "identifier"
	// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:36:1: identifier : IDENTIFIER ;
	public final BstParser.identifier_return identifier() throws RecognitionException {
		BstParser.identifier_return retval = new BstParser.identifier_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token IDENTIFIER32=null;

		Object IDENTIFIER32_tree=null;

		try {
			// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:37:2: ( IDENTIFIER )
			// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:37:4: IDENTIFIER
			{
			root_0 = (Object)adaptor.nil();


			IDENTIFIER32=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_identifier193); 
			IDENTIFIER32_tree = (Object)adaptor.create(IDENTIFIER32);
			adaptor.addChild(root_0, IDENTIFIER32_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "identifier"


	public static class id_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "id"
	// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:39:1: id : '{' ! identifier '}' !;
	public final BstParser.id_return id() throws RecognitionException {
		BstParser.id_return retval = new BstParser.id_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal33=null;
		Token char_literal35=null;
		ParserRuleReturnScope identifier34 =null;

		Object char_literal33_tree=null;
		Object char_literal35_tree=null;

		try {
			// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:40:2: ( '{' ! identifier '}' !)
			// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:40:4: '{' ! identifier '}' !
			{
			root_0 = (Object)adaptor.nil();


			char_literal33=(Token)match(input,32,FOLLOW_32_in_id202); 
			pushFollow(FOLLOW_identifier_in_id205);
			identifier34=identifier();
			state._fsp--;

			adaptor.addChild(root_0, identifier34.getTree());

			char_literal35=(Token)match(input,33,FOLLOW_33_in_id207); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "id"


	public static class idList_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "idList"
	// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:42:1: idList : '{' ( identifier )+ '}' -> ^( IDLIST ( identifier )+ ) ;
	public final BstParser.idList_return idList() throws RecognitionException {
		BstParser.idList_return retval = new BstParser.idList_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal36=null;
		Token char_literal38=null;
		ParserRuleReturnScope identifier37 =null;

		Object char_literal36_tree=null;
		Object char_literal38_tree=null;
		RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
		RewriteRuleTokenStream stream_32=new RewriteRuleTokenStream(adaptor,"token 32");
		RewriteRuleSubtreeStream stream_identifier=new RewriteRuleSubtreeStream(adaptor,"rule identifier");

		try {
			// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:43:2: ( '{' ( identifier )+ '}' -> ^( IDLIST ( identifier )+ ) )
			// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:43:4: '{' ( identifier )+ '}'
			{
			char_literal36=(Token)match(input,32,FOLLOW_32_in_idList217);  
			stream_32.add(char_literal36);

			// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:43:8: ( identifier )+
			int cnt3=0;
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==IDENTIFIER) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:43:8: identifier
					{
					pushFollow(FOLLOW_identifier_in_idList219);
					identifier37=identifier();
					state._fsp--;

					stream_identifier.add(identifier37.getTree());
					}
					break;

				default :
					if ( cnt3 >= 1 ) break loop3;
					EarlyExitException eee = new EarlyExitException(3, input);
					throw eee;
				}
				cnt3++;
			}

			char_literal38=(Token)match(input,33,FOLLOW_33_in_idList222);  
			stream_33.add(char_literal38);

			// AST REWRITE
			// elements: identifier
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 43:24: -> ^( IDLIST ( identifier )+ )
			{
				// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:43:27: ^( IDLIST ( identifier )+ )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(IDLIST, "IDLIST"), root_1);
				if ( !(stream_identifier.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_identifier.hasNext() ) {
					adaptor.addChild(root_1, stream_identifier.nextTree());
				}
				stream_identifier.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "idList"


	public static class idList0_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "idList0"
	// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:45:1: idList0 : '{' ( identifier )* '}' -> ^( IDLIST ( identifier )* ) ;
	public final BstParser.idList0_return idList0() throws RecognitionException {
		BstParser.idList0_return retval = new BstParser.idList0_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal39=null;
		Token char_literal41=null;
		ParserRuleReturnScope identifier40 =null;

		Object char_literal39_tree=null;
		Object char_literal41_tree=null;
		RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
		RewriteRuleTokenStream stream_32=new RewriteRuleTokenStream(adaptor,"token 32");
		RewriteRuleSubtreeStream stream_identifier=new RewriteRuleSubtreeStream(adaptor,"rule identifier");

		try {
			// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:46:2: ( '{' ( identifier )* '}' -> ^( IDLIST ( identifier )* ) )
			// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:46:4: '{' ( identifier )* '}'
			{
			char_literal39=(Token)match(input,32,FOLLOW_32_in_idList0240);  
			stream_32.add(char_literal39);

			// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:46:8: ( identifier )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==IDENTIFIER) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:46:8: identifier
					{
					pushFollow(FOLLOW_identifier_in_idList0242);
					identifier40=identifier();
					state._fsp--;

					stream_identifier.add(identifier40.getTree());
					}
					break;

				default :
					break loop4;
				}
			}

			char_literal41=(Token)match(input,33,FOLLOW_33_in_idList0245);  
			stream_33.add(char_literal41);

			// AST REWRITE
			// elements: identifier
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 46:24: -> ^( IDLIST ( identifier )* )
			{
				// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:46:27: ^( IDLIST ( identifier )* )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(IDLIST, "IDLIST"), root_1);
				// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:46:36: ( identifier )*
				while ( stream_identifier.hasNext() ) {
					adaptor.addChild(root_1, stream_identifier.nextTree());
				}
				stream_identifier.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "idList0"


	public static class function_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "function"
	// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:48:1: function : ( '<' | '>' | '=' | '+' | '-' | ':=' | '*' | identifier );
	public final BstParser.function_return function() throws RecognitionException {
		BstParser.function_return retval = new BstParser.function_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal42=null;
		Token char_literal43=null;
		Token char_literal44=null;
		Token char_literal45=null;
		Token char_literal46=null;
		Token string_literal47=null;
		Token char_literal48=null;
		ParserRuleReturnScope identifier49 =null;

		Object char_literal42_tree=null;
		Object char_literal43_tree=null;
		Object char_literal44_tree=null;
		Object char_literal45_tree=null;
		Object char_literal46_tree=null;
		Object string_literal47_tree=null;
		Object char_literal48_tree=null;

		try {
			// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:49:2: ( '<' | '>' | '=' | '+' | '-' | ':=' | '*' | identifier )
			int alt5=8;
			switch ( input.LA(1) ) {
			case 29:
				{
				alt5=1;
				}
				break;
			case 31:
				{
				alt5=2;
				}
				break;
			case 30:
				{
				alt5=3;
				}
				break;
			case 26:
				{
				alt5=4;
				}
				break;
			case 27:
				{
				alt5=5;
				}
				break;
			case 28:
				{
				alt5=6;
				}
				break;
			case 25:
				{
				alt5=7;
				}
				break;
			case IDENTIFIER:
				{
				alt5=8;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}
			switch (alt5) {
				case 1 :
					// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:49:4: '<'
					{
					root_0 = (Object)adaptor.nil();


					char_literal42=(Token)match(input,29,FOLLOW_29_in_function263); 
					char_literal42_tree = (Object)adaptor.create(char_literal42);
					adaptor.addChild(root_0, char_literal42_tree);

					}
					break;
				case 2 :
					// /home/ufscar/Desktop/Borto/jabref2/src/main/antlr3/org/jabref/bst/Bst.g:49:10: '>'
					{
					root_0 = (Object)adaptor.nil();


					char_literal43=(Token)match(input,31,FOLLOW_31_in_function267); 
					char_literal43_tree = (Object)adaptor.create(char_literal43);
					adaptor.addChild(root_0, char_literal43_tree);
